Changes
=======

0.18.1 (2022-08-01)
-------------------
- Drop python 2 from travis build (#275)
- make collections import future-proof, use collections.abc (#278)

0.18.0 (2019-03-05)
-------------------
- Added support for bypass_mbtiles_validation flag in the Uploads API (#271)

0.17.2 (2018-11-30)
-------------------

Bug fixes:

- Coordinates have been swapped to get the proper order in the GeoJSON response
  from the Directions service (#262).
- The missing option to select duration, distance, or both matrices has been
  implemented by adding a optional annotations keyword argument to the matrix
  method (#266).

0.17.1 (2018-09-26)
-------------------

Bug fixes:

- Fix for the encoding of Tilequery coordinates (#259).

0.17.0 (TBD)
------------

New features:

- Added support for Tilequery API v4 (#256).

0.16.2 (2018-06-22)
-------------------
- Fix GeoJSON coordinates in directions (#243).
- Add missing comma in setup requirements list (#247).

0.16.1 (2018-06-01)
-------------------
- Python 2/3 bugfixes (#239)
- Add support for Maps v4 (#228).

0.16.0 (2018-05-08)
-------------------
- Added support for Directions v5 (#203).
- The Mapbox Distance API is no more and the distance module has been deleted
  (#232). Users must use the DirectionsMatrix introduced in 0.15.
- Project documentation is now on Read the Docs:
  https://mapbox-mapbox.readthedocs-hosted.com/en/latest/.

0.15.1 (2018-01-16)
-------------------
- Restore the valid_profiles attribute needed by the Mapbox CLI's distance
  command (#219).

0.15.0 (2018-01-08)
-------------------
- Add api_name and api_version class attributes (#207).
- Add DirectionsMatrix class for access to the Matrix API V1 (#212).
- Add support for sequences of geometries and coordinate pairs to read_points
  (#212).

Deprecations:

- 'account' keyword argument of `Uploader` class's `list()`, `delete()`,
  and `status()` methods will be removed at 1.0. It is replaced by the
  'username' keyword argument.